syntax = "proto3";

option csharp_namespace = "ServerAdmin";
package users;


service UserProto {
  rpc GetUsers (UsersRequest) returns (UsersReply);
  rpc AddModifyUsers (AddModifyUserRequest) returns (AddModifyUserReply);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);

}
message UsersRequest {
  string user = 1;
}

// The response message containing the greetings.
message UsersReply {
  string users = 1;
}

message AddModifyUserRequest{
  string user = 1;
  string userToAdd = 2;
}

message AddModifyUserReply {
  string response = 1;
}

message DeleteUserRequest {
  string user = 1;
  string userToDelete = 2;
}

message DeleteUserReply {
  string deletedUser = 1;
}